--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<h1>My Portfolio</h1>
+<h1>Cody Cox's ePortfolio</h1>
+
+<p>A demonstration of my projects and general experience, also containing the Capstone Project for my Computer Science Degree from Southern New Hampshire University.</p>
 
 You can use the [editor on GitHub](https://github.com/cohcox/cohcox.github.io/edit/main/index.md) to maintain and preview the content for your website in Markdown files.
 
 Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
 
-Hyper Link to Bitbucket with original project in Java language.
-https://codycox-admin@bitbucket.org/codycox/zooauthenticatorjava.git
+<li><a href="https://codycox-admin@bitbucket.org/codycox/zooauthenticatorjava.git">Hyper Link to Bitbucket with original project in Java language.</a></li>
 
-Hyper link to enhanced project now in Python language.
-https://github.com/cohcox/cohcox.github.io/tree/main/ZooAuthenticatorPython
+
+<li><a href="https://github.com/cohcox/cohcox.github.io/tree/main/ZooAuthenticatorPython">Hyper link to enhanced project now in Python language.</a></li>
+
 
 
 ### Markdown
